policies/deny-exec-by-namespace-label/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-exec-by-namespace-label
policies:
  - ../policy.yaml
resources:
  - resources.yaml
variables: values.yaml
results:
  - policy: deny-exec-by-namespace-label
    rule: deny-exec-by-namespace-label
    kind: PodExecOptions
    resources:
      - good-exec-open-ns
    result: pass
  - policy: deny-exec-by-namespace-label
    rule: deny-exec-by-namespace-label
    kind: PodExecOptions
    resources:
      - bad-exec-locked-ns
    result: fail
  - policy: deny-exec-by-namespace-label
    rule: deny-exec-by-namespace-label
    kind: PodExecOptions
    resources:
      - exempt-system-exec
    result: skip
